# LoopAgent

./: .env.example  .gitignore  .npmignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml  tests.yml
agents/: README.md  s01_loop.py  s02_protocol.py  s03_memory.py  s04_skills.py  s05_coding.py  s06_team.py  s07_task_system.py  s_full.py
docs/: artifacts-schema.md  learning-path.md  repo-layout.md
examples/: README.md  api_demo.py  browser_tools.py  json_loop_stub_demo.py  logging_demo.py  prompts_demo.py  provider_demo.py
scripts/: py310_compat.py
skills/: README.md  commands.md  files.md  memory.md  web_search.md
skills/browser/: SKILL.md
skills/commands/: SKILL.md
skills/files/: SKILL.md
skills/memory/: SKILL.md
skills/web_search/: SKILL.md
src/anvil/: __init__.py  __main__chat.py  agent_cli.py  agent_protocol.py  api.py  chat_runtime.py  cli.py  coding_agent.py  commands.py  compression.py  config.py  context_schema.py  errors.py  events.py  logging.py  messages.py  permissions.py  policies.py  run_schema.py  runtime.py  session.py  skills.py  subagents.py  task_graph.py  tool_builder.py  tool_def.py  tool_spec.py  tool_use_loop.py  tool_views.py  tools.py  worktree_manager.py
src/anvil/commands/: __init__.py  slash.py
src/anvil/core/: __init__.py  agent.py  serialization.py  stop.py  types.py
src/anvil/entrypoints/: __init__.py  agent.py  parser_builders.py
src/anvil/llm/: providers.py
src/anvil/memory/: __init__.py
src/anvil/ops/: doctor.py
src/anvil/protocols/: __init__.py  json_decision.py
src/anvil/services/: __init__.py  catalog_service.py  chat_runtime.py  cli_commands.py  coding_runtime.py  event_viewer.py  replay_service.py  session_renderer.py  session_runtime.py  team_commands.py  team_service.py
src/anvil/steps/: __init__.py  demo.py
src/anvil/ui/: tui_chat.py
src/loop_agent/: __init__.py  __main__chat.py  agent_cli.py  agent_protocol.py  api.py  background.py  cli.py  coding_agent.py  compression.py  config.py  doctor.py  errors.py  git_tools.py  github_tools.py  logging.py  mailbox.py  openclaw_cli.py  policies.py  prompts.py  run_recorder.py  run_schema.py  runtime.py  scheduler.py  skills.py  subagents.py  task_graph.py  task_store.py  team_runtime.py  todo.py  tool_builder.py  tool_use_loop.py  tools.py  tui_chat.py  worktree_manager.py
src/loop_agent/core/: __init__.py  agent.py  serialization.py  types.py
src/loop_agent/llm/: __init__.py  providers.py
src/loop_agent/memory/: base.py  jsonl_store.py
src/loop_agent/ops/: __init__.py  doctor.py  git_tools.py  github_tools.py
src/loop_agent/steps/: json_loop.py  registry.py
src/loop_agent/tools/: __init__.py
src/loop_agent/ui/: __init__.py  tui_chat.py
tests/: test_agent.py  test_agent_cli.py  test_api.py  test_cli.py  test_coding_agent.py  test_config.py  test_context_schema.py  test_doctor.py  test_git_tools.py  test_github_tools.py  test_json_loop_step.py  test_json_protocol.py  test_learning_path.py  test_mailbox.py  test_memory_store.py  test_permissions.py  test_policies.py  test_provider_anthropic_gemini.py  test_provider_fallback.py  test_provider_headers.py  test_scheduler.py  test_serialization.py  test_session.py  test_skills.py  test_step_registry.py  test_subagents.py  test_task_graph.py  test_task_store.py  test_team_runtime.py  test_tool_use_loop.py  test_tools.py  test_tui_chat.py  test_worktree_manager.py
