[project]
name = "Anvil"
version = "0.1.0"
description = "Terminal-first coding agent runtime inspired by Claude Code."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Anvil Contributors" },
]
keywords = ["agent", "ai", "runtime", "coding", "llm", "claude", "gemini", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = []

[project.optional-dependencies]
browser = ["playwright"]
all = ["playwright"]
dev = []
tui = ["textual>=0.86.2"]

[project.scripts]
anvil = "anvil.entrypoints.agent:main"
anvil-core = "anvil.cli:main"
anvil-chat = "anvil.ui.tui_chat:main"

[project.urls]
Homepage = "https://github.com/t0ugh-sys/Anvil"
Repository = "https://github.com/t0ugh-sys/Anvil"
Issues = "https://github.com/t0ugh-sys/Anvil/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
anvil = ["py.typed"]
